force-app/main/default/objects/CF_Trend_Detection__c/CF_Trend_Detection__c.object-meta.xml
<CustomObject>
    <label>Trend Detection</label>
    <nameField>
        <displayFormat>TD-{000000}</displayFormat>
        <label>Trend Detection Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Trend Detections</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>