force-app/main/default/objects/CF_Trend_Detection__c/fields/CF_Coaching_Session__c.field-meta.xml
<CustomField>
    <fullName>CF_Coaching_Session__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Coaching Session</label>
    <referenceTo>CF_Coaching_Session__c</referenceTo>
    <relationshipLabel>Trend Detections</relationshipLabel>
    <relationshipName>Trend_Detections</relationshipName>
    <type>Lookup</type>
</CustomField>