force-app/main/default/objects/CF_Trend_Detection__c/fields/CF_Criterion__c.field-meta.xml
<CustomField>
    <fullName>CF_Criterion__c</fullName>
    <label>Criterion</label>
    <length>255</length>
    <type>Text</type>
</CustomField>