force-app/main/default/objects/CF_Trend_Detection__c/fields/CF_Failed_Count__c.field-meta.xml
<CustomField>
    <fullName>CF_Failed_Count__c</fullName>
    <label>Failed Count</label>
    <precision>15</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>