force-app/main/default/objects/CF_Trend_Detection__c/fields/CF_Pass_Percent__c.field-meta.xml
<CustomField>
    <fullName>CF_Pass_Percent__c</fullName>
    <label>Pass Percent</label>
    <precision>17</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>