force-app/main/default/objects/CF_Trend_Detection__c/fields/CF_Status__c.field-meta.xml
<CustomField>
    <fullName>CF_Status__c</fullName>
    <label>Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Needs Coaching</fullName>
            </value>
            <value>
                <fullName>Coached</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>