force-app/main/default/objects/CF_Trend_Detection__c/fields/CF_Summary__c.field-meta.xml
<CustomField>
    <fullName>CF_Summary__c</fullName>
    <label>Summary</label>
    <length>255</length>
    <type>Text</type>
</CustomField>